--- a/demo.css
+++ b/demo.css
@@ -23,18 +23,31 @@
     display: table-row;
 }
 
+.panel-fill-margin {
+    margin-left: 15px;
+    margin-right: 15px; 
+}
+
+.panel {
+    border-radius: 4px 4px 0 0;
+}
+
 .panel-body {
     padding: 0;
 }
+.panel-body-stretch {
+    height: 100%;
+}
+
 
 .panel-fill {
     height: 100%;
-    padding-bottom: 30px;
+    /*padding-bottom: 30px;*/
 }
 .panel-body-fill {
     height: 100%;
-    padding: 0;
-    padding-bottom: 56px;
+    /*padding-bottom: 56px;*/
+    padding-bottom: 82px;
 }
 
 .panelMargin {
@@ -44,7 +57,7 @@
 .panel-toolbar {
     background-color: #efefef;
     border-bottom: 0;
-    padding: 5px 15px;
+    padding: 3px 15px;
     line-height: 1.428571429;
     display: block;
     border-bottom:  1px solid #dcdcdc
@@ -55,13 +68,18 @@
 }
 
 .layersgridStyle {
-    height: 91px; /*30px per row*/
+    height: 92px; /*30px per row*/
 }
 .outputGridStyle{
     height: 151px; 
 }
 
 .lyrVisClass {
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     display: -webkit-flex;
     -webkit-align-items: center;
     -webkit-justify-content: center;
