--- a/demo.css
+++ b/demo.css
@@ -42,11 +42,10 @@
 
 .panel-fill {
     height: 100%;
-    /*padding-bottom: 30px;*/
+    min-height: 330px;
 }
 .panel-body-fill {
     height: 100%;
-    /*padding-bottom: 56px;*/
     padding-bottom: 82px;
 }
 
